--- a/practice/taylor/imooc/views/pages/index.jade
+++ b/practice/taylor/imooc/views/pages/index.jade
@@ -11,7 +11,7 @@ block content
                   a(href="/movie/#{item._id}")
                      img(src="#{item.poster}", alt="#{item.title}")
                   .caption
-                     h3 #{title}
+                     h3 #{item.title}
                      p: a.btn.btn-primary(href="movie/#{item._id}", role="button") 观看预告片
 
 
