--- a/practice/taylor/imooc/views/pages/list.jade
+++ b/practice/taylor/imooc/views/pages/list.jade
@@ -13,7 +13,8 @@ block content
                   th 导演
                   th 国家
                   th 上映年份
-                  //- th 录入时间
+                  th 录入时间
+                  th 更新时间
                   th 查看
                   th 更新
                   th 删除
@@ -24,7 +25,8 @@ block content
                      td #{item.director}
                      td #{item.country}
                      td #{item.year}
-                     //- td #{moment(item.meta.createdAt).format("MM/DD/YYYY")}
+                     td #{moment(item.meta.createAt).format("MM/DD/YYYY H:m")}
+                     td #{moment(item.meta.updateAt).format("MM/DD/YYYY H:m")}
                      td: a(target="_blank", href="../movie/#{item._id}") 查看
                      td: a(target="_blank", href="../admin/update/#{item._id}") 修改
                      td
