--- a/practice/taylor/imooc/app/views/pages/list.jade
+++ b/practice/taylor/imooc/app/views/pages/list.jade
@@ -27,8 +27,8 @@ block content
                      td #{item.year}
                      td #{moment(item.meta.createAt).format("MM/DD/YYYY H:m")}
                      td #{moment(item.meta.updateAt).format("MM/DD/YYYY H:m")}
-                     td: a(target="_blank", href="../movie/#{item._id}") 查看
-                     td: a(target="_blank", href="../admin/update/#{item._id}") 修改
+                     td: a(target="_blank", href="../../movie/#{item._id}") 查看
+                     td: a(target="_blank", href="../movie/update/#{item._id}") 修改
                      td
                         button.btn.btn-danger.del(type="button", data-id="#{item._id}") 删除
       script(src="/js/admin.js")
