--- a/practice/taylor/imooc/app/views/includes/header.jade
+++ b/practice/taylor/imooc/app/views/includes/header.jade
@@ -3,17 +3,17 @@
       .page-header
          h1= title
          small 重度科幻迷
-.navbar.navbar-default.navbar-fixed-bottom
+.navbar.navbar-default.navbar-fixed-top(role="navigation")
    .container
-      .navbar-header
+      .navbar-header.clearfix
          a.navbar-brand(href="/") 重度科幻迷
-         if user
-            p.navbar-text.navbar-right
-               span 欢迎您,#{user.name}
-               span &nbsp; | &nbsp;
-               a.navbar-link(href="/logout") 登出
-         else
-            p.navbar-text.navbar-right
-               a.navbar-link(href="/signup") 注册
-               span &nbsp; | &nbsp;
-               a.navbar-link(href="/signin") 登录
+      if user
+         p.navbar-text.navbar-right
+            span 欢迎您,#{user.name}
+            span &nbsp; | &nbsp;
+            a.navbar-link(href="/logout") 登出
+      else
+         p.navbar-text.navbar-right
+            a.navbar-link(href="/signup") 注册
+            span &nbsp; | &nbsp;
+            a.navbar-link(href="/signin") 登录
