--- a/practice/taylor/imooc/app/views/pages/detail.jade
+++ b/practice/taylor/imooc/app/views/pages/detail.jade
@@ -16,17 +16,35 @@ block content
                      each item in comments
                         li.media
                            .pull-left
-                              img.media-object(src="", style="height:64px; width: 64px;")
+                              a.comment(href="#comments", data-cid="#{item._id}", data-tid="#{item.from._id}")
+                                 img.media-object(src="", style="height:64px; width: 64px;")
                            .media-body
                               h4.media-heading #{item.from.name}
                               p #{item.content}
-                           hr
-                     form(method="POST", action="/user/comment")
-                        input(type="hidden", name="comment[movie]" value="#{movie._id}")
-                        input(type="hidden", name="comment[from]" value="#{user._id}")
-                        .form-group
-                           textarea.form-control(name="comment[content]", row="3")
-                        button.btn.btn-primary(type="submit") 提交
+                              if item.reply && item.reply.length > 0
+                                 each reply in item.reply
+                                    .media
+                                       .pull-left
+                                          a.comment(href="#comments", data-cid="#{item._id}", data-tid="#{reply.from._id}")
+                                             img.media-object(src="", style="width:64px; height:64px;")
+                                       .media-body
+                                          h4.media-heading
+                                             | #{reply.from.name}
+                                             span.text-info &nbsp;回复&nbsp;
+                                             | #{reply.to.name}:
+                                          p #{reply.content}
+                              hr
+                  #comments
+                     form#commentForm(method="POST", action="/user/comment")
+                        if user
+                           input(type="hidden", name="comment[movie]" value="#{movie._id}")
+                           input(type="hidden", name="comment[from]" value="#{user._id}")
+                        if user
+                           .form-group
+                              textarea#commentContent.form-control(name="comment[content]", row="3")
+                           button.btn.btn-primary(type="submit") 提交
+                        else
+                           a.navbar-link(href="/signin") 登录后可评论
          .col-md-5
             dl.dl-horizontal
                dt 电影名字
@@ -41,3 +59,4 @@ block content
                dd= movie.year
                dt 简介
                dd= movie.summary
+   script(src="/js/detail.js")
