--- a/practice/taylor/imooc/app/views/pages/categorylist.jade
+++ b/practice/taylor/imooc/app/views/pages/categorylist.jade
@@ -1,34 +1,27 @@
 //
-   Created by taylor on 20/12/16.
+   Created by taylor on 09/01/17.
 
 extends ../layout
-
 block content
    .container
       .row
          table.table.table-hover.table-bordered
             thead
                tr
-                  th 电影名字
-                  th 导演
-                  th 国家
-                  th 上映年份
+                  th 分类名字
                   th 录入时间
                   th 更新时间
                   th 查看
                   th 更新
                   th 删除
             tbody
-               each item in movies
+               each item in categories
                   tr(class="item-id-#{item._id}")
-                     td #{item.title}
-                     td #{item.director}
-                     td #{item.country}
-                     td #{item.year}
+                     td #{item.name}
                      td #{moment(item.meta.createAt).format("MM/DD/YYYY H:m")}
                      td #{moment(item.meta.updateAt).format("MM/DD/YYYY H:m")}
-                     td: a(target="_blank", href="/movie/#{item._id}") 查看
-                     td: a(target="_blank", href="/admin/movie/update/#{item._id}") 修改
+                     td: a(target="_blank", href="../../category/#{item._id}") 查看
+                     td: a(target="_blank", href="../category/update/#{item._id}") 修改
                      td
                         button.btn.btn-danger.del(type="button", data-id="#{item._id}") 删除
       script(src="/js/admin.js")
