--- a/practice/taylor/imooc/app/views/pages/index.jade
+++ b/practice/taylor/imooc/app/views/pages/index.jade
@@ -6,9 +6,10 @@ block content
    .container
       .row
          each category in categories
-            .panel.panel-primary
+            .panel.panel-default
                .panel-heading
-                  h3 #{category.name}
+                  h3
+                     a(href='/results?categoryId=#{category._id}&p=0') #{category.name}
                .panel-body
                   if category.movies && category.movies.length > 0
                      each item in category.movies
